@@ -1,3 +1,8 @@
+2024-02-06  KAWANO Toshihiko  <kawano@lanl.gov>
+
+	* source/dece.cpp (DeceHelpENDF): new function
+	print ENDF MF MT number explanation by command line option "-m"
+
 2024-02-02  KAWANO Toshihiko  <kawano@lanl.gov>
 
 	* source/decemod4.cpp (DeceResonanceAngularDistribution): updated
